# trackr

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
api/: __init__.py  main.py  models.py  run.sh
api/carriers/: __init__.py  afklcargo.py  amerijet.py  atlas.py  base.py  cargolux.py  china_cargo.py  copa.py  dhl_aviation.py  iag_cargo.py  koreanair.py  latam.py  registry.py  silkway.py  smartkargo.py  turkish.py
front/: next.config.ts  package.json  pnpm-lock.yaml
front-vite/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
front-vite/docs/: CARGOTRACKER.md  DOCKER.md
front-vite/src/: App.tsx  index.css
front-vite/src/components/: Dashboard.tsx  ErrorCard.tsx  FlightRadar.tsx  LoadingCard.tsx  SupportedCarriers.tsx  TrackingForm.tsx  TrackingResult.tsx  TrackingSidebar.tsx
front-vite/src/hooks/: useTrackedAWBs.ts
front-vite/src/lib/: api.ts
front/app/: globals.css  layout.tsx  page.tsx
front/components/: supported-carriers.tsx  tracking-form.tsx  tracking-result.tsx
front/lib/: api.ts
scripts/: cron-setup.md  daily_health_report.py  health_check.py  test_carriers_live.py
tests/: __init__.py  conftest.py  test_api.py  test_carriers.py  test_models.py
